--- a/pyqt_course/33_notepad_app/ipad_main.ui
+++ b/pyqt_course/33_notepad_app/ipad_main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>640</width>
-    <height>571</height>
+    <width>790</width>
+    <height>543</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,7 +19,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>640</width>
+     <width>790</width>
      <height>24</height>
     </rect>
    </property>
@@ -77,7 +77,43 @@
    <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionUndo"/>
+   <addaction name="actionRedu"/>
+   <addaction name="actionCut"/>
+   <addaction name="actionCopy"/>
+   <addaction name="actionPaste"/>
+   <addaction name="actionNew"/>
+   <addaction name="actionOpen"/>
+   <addaction name="actionSave"/>
+   <addaction name="actionPrint"/>
+   <addaction name="actionPrint_Preview"/>
+   <addaction name="actionExport_PDF"/>
+   <addaction name="actionQ"/>
+   <addaction name="actionBold"/>
+   <addaction name="actionItalic"/>
+   <addaction name="actionUnderline"/>
+   <addaction name="actionLeft"/>
+   <addaction name="actionRight"/>
+   <addaction name="actionCenter"/>
+   <addaction name="actionJustify"/>
+   <addaction name="actionFont"/>
+   <addaction name="actionColor"/>
+  </widget>
   <action name="actionNew">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/new.png</normaloff>:/images/new.png</iconset>
+   </property>
    <property name="text">
     <string>New</string>
    </property>
@@ -86,6 +122,10 @@
    </property>
   </action>
   <action name="actionOpen">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/open.png</normaloff>:/images/open.png</iconset>
+   </property>
    <property name="text">
     <string>Open</string>
    </property>
@@ -94,6 +134,10 @@
    </property>
   </action>
   <action name="actionSave">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/save.png</normaloff>:/images/save.png</iconset>
+   </property>
    <property name="text">
     <string>Save</string>
    </property>
@@ -102,6 +146,10 @@
    </property>
   </action>
   <action name="actionPrint">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/print.png</normaloff>:/images/print.png</iconset>
+   </property>
    <property name="text">
     <string>Print</string>
    </property>
@@ -110,6 +158,10 @@
    </property>
   </action>
   <action name="actionPrint_Preview">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/printprev.png</normaloff>:/images/printprev.png</iconset>
+   </property>
    <property name="text">
     <string>Print Preview</string>
    </property>
@@ -118,6 +170,10 @@
    </property>
   </action>
   <action name="actionExport_PDF">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/pdf.png</normaloff>:/images/pdf.png</iconset>
+   </property>
    <property name="text">
     <string>Export PDF</string>
    </property>
@@ -134,6 +190,10 @@
    </property>
   </action>
   <action name="actionUndo">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/undo.png</normaloff>:/images/undo.png</iconset>
+   </property>
    <property name="text">
     <string>Undo</string>
    </property>
@@ -142,14 +202,22 @@
    </property>
   </action>
   <action name="actionRedu">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/redo.png</normaloff>:/images/redo.png</iconset>
+   </property>
    <property name="text">
-    <string>Redu</string>
+    <string>Redo</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Y</string>
    </property>
   </action>
   <action name="actionCut">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/cut.png</normaloff>:/images/cut.png</iconset>
+   </property>
    <property name="text">
     <string>Cut</string>
    </property>
@@ -158,6 +226,10 @@
    </property>
   </action>
   <action name="actionCopy">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/copy.png</normaloff>:/images/copy.png</iconset>
+   </property>
    <property name="text">
     <string>Copy</string>
    </property>
@@ -166,6 +238,10 @@
    </property>
   </action>
   <action name="actionPaste">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/paste.png</normaloff>:/images/paste.png</iconset>
+   </property>
    <property name="text">
     <string>Paste</string>
    </property>
@@ -174,6 +250,10 @@
    </property>
   </action>
   <action name="actionBold">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/bold.png</normaloff>:/images/bold.png</iconset>
+   </property>
    <property name="text">
     <string>Bold</string>
    </property>
@@ -182,6 +262,10 @@
    </property>
   </action>
   <action name="actionItalic">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/italic.png</normaloff>:/images/italic.png</iconset>
+   </property>
    <property name="text">
     <string>Italic</string>
    </property>
@@ -190,6 +274,10 @@
    </property>
   </action>
   <action name="actionUnderline">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/underline.png</normaloff>:/images/underline.png</iconset>
+   </property>
    <property name="text">
     <string>Underline</string>
    </property>
@@ -198,6 +286,10 @@
    </property>
   </action>
   <action name="actionLeft">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/left.png</normaloff>:/images/left.png</iconset>
+   </property>
    <property name="text">
     <string>Left</string>
    </property>
@@ -206,6 +298,10 @@
    </property>
   </action>
   <action name="actionRight">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/right.png</normaloff>:/images/right.png</iconset>
+   </property>
    <property name="text">
     <string>Right</string>
    </property>
@@ -214,6 +310,10 @@
    </property>
   </action>
   <action name="actionCenter">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/center.png</normaloff>:/images/center.png</iconset>
+   </property>
    <property name="text">
     <string>Center</string>
    </property>
@@ -222,6 +322,10 @@
    </property>
   </action>
   <action name="actionJustify">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/justify.png</normaloff>:/images/justify.png</iconset>
+   </property>
    <property name="text">
     <string>Justify</string>
    </property>
@@ -230,11 +334,19 @@
    </property>
   </action>
   <action name="actionFont">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/font.png</normaloff>:/images/font.png</iconset>
+   </property>
    <property name="text">
     <string>Font</string>
    </property>
   </action>
   <action name="actionColor">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/color.png</normaloff>:/images/color.png</iconset>
+   </property>
    <property name="text">
     <string>Color</string>
    </property>
@@ -258,19 +370,29 @@
    </property>
   </action>
   <action name="actionQ">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/exit.png</normaloff>:/images/exit.png</iconset>
+   </property>
    <property name="text">
-    <string>Goodbye</string>
+    <string>Quit</string>
    </property>
    <property name="shortcut">
     <string>Meta+Alt+Q</string>
    </property>
   </action>
   <action name="actionAbout_app">
+   <property name="icon">
+    <iconset resource="images/images.qrc">
+     <normaloff>:/images/about.png</normaloff>:/images/about.png</iconset>
+   </property>
    <property name="text">
     <string>About app</string>
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="images/images.qrc"/>
+ </resources>
  <connections/>
 </ui>
